--- a/1. 사용자 시나리오 - 고객.md
+++ b/1. 사용자 시나리오 - 고객.md
@@ -1,6 +1,6 @@
 **전체 usecase**
 
-![1562071824973](assets/1562071824973.png)
+![1562115625307](assets/1562115625307.png)
 
 **고객 usecases**
 
@@ -25,6 +25,8 @@
 <br>
 
 ### 3) 상품 상세 조회
+
+> 맘에 드는 상품이 있는 경우 해당 상품의 옵션을 선택해 장바구니에 담는다. 
 
 ![1562066960243](assets/1562066960243.png)
 
@@ -80,9 +82,17 @@
 
 <br>
 
-### 9) 주문결제
+### 9) 주문결제 **(비회원)**
+
+> 비회원 주문 시 주문자 정보와 주문 조회를 할 수 있는 비밀번호를 입력한다.
 
 ![1562069088777](assets/1562069088777.png)
+
+<br>
+
+### 9-2) 주문결제 **(회원)**
+
+![1562241765342](assets/1562241765342.png)
 
 <br>
 
