--- a/2. 사용자 시나리오 - 관리자.md
+++ b/2. 사용자 시나리오 - 관리자.md
@@ -1,16 +1,14 @@
 **전체 usecase**
 
-![1562071824973](assets/1562071824973.png)
+![1562115625307](assets/1562115625307.png)
 
 **관리자 usecase**
 
-![1562071862156](assets/1562071862156.png)
+![1562115610252](assets/1562115610252.png)
 
 
 
 [TOC]
-
-
 
 # # 관리자
 
@@ -44,89 +42,19 @@
 
 <br>
 
-### 5)
+### 5) 주문관리
 
-
-
-<br>
-
-### 2)
-
-
+#### 5-1) 주문 목록 확인
 
 <br>
 
-### 2)
-
-
+### 6) 주문 상세 조회
 
 <br>
 
-### 2)
+### 7) 고객관리
 
+#### 7-1) 회원조회
 
-
-<br>
-
-### 2)
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#### 7-2) 회원삭제
 
