--- a/3. DB Schema.md
+++ b/3. DB Schema.md
@@ -1,7 +1,5 @@
 [TOC]
 
----
-
 ![1562241839251](assets/1562241839251.png)
 
 ---
@@ -40,8 +38,6 @@
 
 - 순서번호는 카테고리의 보여줄 순서를 지정하기 위해 넣었다. (default 1)
 
-
-
 **ex) 예시 데이터**
 
 | no   | name   | depth | group_no | order_no |
@@ -61,80 +57,183 @@
 
 ![1562239648428](assets/1562239648428.png)
 
-- 옵션은 두 개의 테이블로 나누었다.
+- 옵션은 3개의 테이블로 나누었다.
 
-- (원래는 3개의 테이블로 나눴었다. 하지만 많은 join을 최대한 줄이고자 2개로 줄여봤다. )
+  > 원래는 2개의 테이블로 나눴었다. 하지만 중복된 값들이 계속 들어가게 되어 4개로 늘렸다.
+  >
+  > (옷 쇼핑몰을 예로 들면 모든 상품은 `색상, 사이즈 ` 옵션을 갖기 마련인데, 데이터마다 계속  색상, 사이즈를 입력해주는 상황)
 
-- `<option>` 테이블에서는 해당 상품 번호의 옵션의 종류를 설정한다.
+- `optionname` 테이블
 
-- 1번상품에는 `색상 옵션`에 색상 `옵션의 값`은 검정, 분홍, 초록이 있고, `사이즈 옵션 `이 있으며 이의 `사이즈 옵션` 값은 L, M, S가 있다고 가정한다.
+  - 옵션의 이름만 저장하는 테이블 
 
-  그렇다면 총 옵션의 종류는 9가지가 된다. (검정/L, 검정/M, 검정/S, 분홍/L, 분홍/M, 분홍/S, 초록/L, 초록/M, 초록/S)
+    **ex) 예시 데이터**
 
-  이 경우 1번 상품의 개수는 9개가 되는 셈이다.  하지만, 여기서 검정색은 M사이즈가 없고 초록색은 S사이즈가 없다고 가정한다면,  (검정/L, 검정/S, 분홍/L, 분홍/M, 분홍/S, 초록/L, 초록/M) 상품의 수는 7개가 된다. (이는 클라이언트 측에서 옵션의 설정으로 추가/삭제 할 수 있도록 구현해보자..!)
+    | no   | name   |
+    | ---- | ------ |
+    | 1    | 색상   |
+    | 2    | 사이즈 |
 
-  이렇게 설정된 옵션의 값의 데이터들을 `최종옵션` 테이블에 넣어줄 것이다.
+    > 사용자가 옵션을 추가할 때, 이 테이블에 있는 값이면 그 옵션 이름의 번호를 사용하고,
+    >
+    > 테이블에 들어있지 않은 데이터 `모양`이라는 옵션을 새로 추가하는 옵션일 경우 아래와 같이 추가된다.
+    >
+    > | no   | name   |
+    > | ---- | ------ |
+    > | 1    | 색상   |
+    > | 2    | 사이즈 |
+    > | 3    | 모양   |
 
-**ex) 예시 데이터** 
+- `option` 테이블
 
-**(1) option table**
+  - 옵션 테이블에서는 해당 상품 번호와 옵션이름_번호를 저장한다.
 
-- 옵션 `style` 컬럼은 해당 옵션의  클라이언트 쪽 스타일을 지정해 줄 것이다. (드롭다운, 체크박스 ... 등 옵션을 선택할 수 있는 스타일)
-- 스타일의 개수는 정해져 있으니 int로 받아 java code에서 enum을 활용해 처리할 것이다. (1-드롭다운, 2-체크박스 ..)
+    **ex) 예시 데이터**
 
-| no   | product_no | name   | value | style |
-| ---- | ---------- | ------ | ----- | ----- |
-| 1    | 1          | 색상   | 검정  | 1     |
-| 2    | 1          | 색상   | 분홍  | 1     |
-| 3    | 1          | 색상   | 초록  | 1     |
-| 4    | 1          | 사이즈 | L     | 1     |
-| 5    | 1          | 사이즈 | M     | 1     |
-| 6    | 1          | 사이즈 | S     | 1     |
-| 7    | 2          | 색상   | 검정  | 1     |
+    1번상품에 색상, 사이즈 옵션이 있고, 2번상품에 색상, 사이즈, 모양이 있는 경우.
 
-> 여기서 고민은 옵션의 중복되는 데이터 값이 너무 많다는 점이다. 
->
-> (테이블을 하나 더 만들어 join을 할지,, 이대로 갈지,, 고민,,,)
+    1번 상품의 색상 옵션에는 검정, 분홍, 초록이 있고, 1번 상품의 사이즈 옵션에는 L, M, S가 있고,
 
-**(2) option table**
+    2번 상품의 색상에는 파란, 초록이 있고, 모양 옵션에는 별모양, 하트모양만 있는 경우
 
-최종 상품의 상세 정보
+    | no   | product_no | optionname_no | value |
+    | ---- | ---------- | ------------- | ----- |
+    | 1    | 1          | 1             | 검정  |
+    | 2    | 1          | 1             | 분홍  |
+    | 3    | 1          | 1             | 초록  |
+    | 4    | 1          | 2             | L     |
+    | 5    | 1          | 2             | M     |
+    | 6    | 1          | 2             | S     |
+    | 7    | 2          | 1             | 파란  |
+    | 8    | 2          | 1             | 초록  |
+    | 9    | 2          | 3             | 별    |
+    | 10   | 2          | 3             | 하트  |
 
-`show`: 상품 옵션을 보여줄 지 여부(일시품절)
+- `finaloption` 테이블
 
-`sell` : 해당 옵션의 상품을 판매하는 지 여부(품절)
+  - 재고 여부 (한정재고, 비재고)의 구분은 `ENUM(1,2)`타입으로 1일경우 한정, 2일경우 비재고를 Java enum을 활용
 
-`user_stock`의 경우 한정재고인지 비재고인지의 여부를 결정한다. (Java에서 Enum을 활용해 1-한정재고, 2-비재고의 구분을 생각했다.)
+  - 1번상품의 `색상 옵션`에 색상 `옵션의 값`은 검정, 분홍, 초록이 있고, `사이즈 옵션 `의 사이즈 옵션 값은 L, M, S가 있다고 가정한다.
 
-| no   | item_name | show | sell | additional amount | user_stock | stock | product_no |
-| ---- | --------- | ---- | ---- | ----------------- | ---------- | ----- | ---------- |
-| 1    | 검정/L    | Y    | Y    | 100               | 1          | 100   | 1          |
-| 2    | 검정/S    | Y    | Y    | 0                 | 1          | 100   | 1          |
-| 3    | 분홍/L    | Y    | Y    | 100               | 1          | 100   | 1          |
-| 4    | 분홍/M    | Y    | Y    | 0                 | 1          | 100   | 1          |
-| 5    | 분홍/S    | Y    | Y    | 0                 | 1          | 100   | 1          |
-| 6    | 초록/L    | Y    | Y    | 100               | 1          | 100   | 1          |
-| 7    | 초록/M    | Y    | Y    | 0                 | 1          | 100   | 1          |
+    그렇다면 총 옵션의 종류는 9가지가 된다.
 
-> 1번 상품의 옵션들 -> 이 테이블의 데이터들이 실질적으로 장바구니와 주문정보에 들어가게 된다.
+    **[검정/L, 검정/M, 검정/S, 분홍/L, 분홍/M, 분홍/S, 초록/L, 초록/M, 초록/S]** 
+
+    이 경우 1번 상품의 개수는 9개가 되는 셈이다.  
+
+    하지만, 여기서 검정색은 M사이즈가 없고 초록색은 S사이즈가 없다고 가정한다면,  
+
+    **[검정/L, 검정/S, 분홍/L, 분홍/M, 분홍/S, 초록/L, 초록/M]** 상품의 수는 7개가 된다. (클라이언트 측에서 옵션의 설정으로 추가/삭제)
+
+    이렇게 최종으로 설정된 옵션의 값의 데이터들을 `finaloption` 테이블에 넣어줄 것이다.
+
+    **ex) 예시 데이터** 
+
+    | no   | product_no | item_name | show | sell | additional_amount | use_stock | stock |
+    | ---- | ---------- | --------- | ---- | ---- | ----------------- | --------- | ----- |
+    | 1    | 1          | 검정/L    | Y    | Y    | 100               | 1         | 100   |
+    | 2    | 1          | 검정/S    | Y    | Y    | 0                 | 1         | 100   |
+    | 3    | 1          | 분홍/L    | Y    | Y    | 100               | 1         | 100   |
+    | 4    | 1          | 분홍/M    | Y    | Y    | 0                 | 1         | 100   |
+    | 5    | 1          | 분홍/S    | Y    | Y    | 0                 | 1         | 100   |
+    | 6    | 1          | 초록/L    | Y    | Y    | 100               | 1         | 100   |
+    | 7    | 1          | 초록/M    | Y    | Y    | 0                 | 1         | 100   |
 
 <br>
 
+# [4] 주문(order)
 
+![1562314574262](assets/1562314574262.png)
 
+- 비회원 주문일 경우 회원의 정보를 입력으로 받고, 회원일 경우 `user` 테이블에서 데이터를 가져와 넣어준다.
+- 회원일 경우는 비밀번호가 필요없으며, 비회원일 경우 주문조회를 할 때 비밀번호를 입력받는다.
+- 회원일 경우 회원 번호를 넣어주고, 비회원일 경우 넣어주지 않는다.
+- 총 가격은 `product` 테이블의 가격과 `finaloption`의 추가 금액을 더한 가격이다.
 
+<br>
 
+# [4] 주문상세(orderdetail)
 
+![1562314845265](assets/1562314845265.png)
 
+- 주문 상세의 경우 모든 상품을 가지고 있는 `order`테이블의 상세정보이다.
 
+- 만약 한사람이 1, 2, 3 번 상품 3개를 구매했다면, 그 각각의 정보가 있는 테이블이다.
 
+- 배송상태는 각각의 상품에 대한 배송 상태를 나타낸다.
 
+  **ex) 예시 데이터**
 
+  1번 주문에 대한 3가지 물품 데이터
 
+  상품의 상세 데이터는 `product_no`으로 `product` 테이블과 join해서 가져온다.
 
+  | no   | order_no | name   | quantity | status | price | product_no |
+  | ---- | -------- | ------ | -------- | ------ | ----- | ---------- |
+  | 1    | 1        | 반팔티 | 1        | 배송중 | 8000  | 1          |
+  | 2    | 1        | 반바지 | 1        | 배송중 | 9000  | 2          |
+  | 3    | 1        | 치마   | 1        | 배송중 | 8500  | 3          |
 
+<br>
 
+# [5] 회원(user)
 
+![1562322055952](assets/1562322055952.png)
 
+- 회원 테이블의 회원 개인 정보와 관련된 컬럼은 암호화를 할 예정이다.
+- 생년월일은 선택사항이다.
+- 비밀번호 질문의 경우 java enum을 활용해 받을 예정이다.
 
+<br>
+
+# [6] 장바구니(cart)
+
+![1562322135170](assets/1562322135170.png)
+
+- 장바구니는 `최종옵션_번호`에 해당하는 상품과 해당 상품의 수량을 저장할 수 있다.
+- 조회시(SELECT) `WHERE 회원_번호=1`과 같이 해당 회원의 장바구니에 담긴 모든 상품을 가져온다.
+- 상품 정보의 경우 `최종옵션_번호` 컬럼으로 `finaloption` 테이블과 join해서 가져온다.
+
+<br>
+
+# [7] 결제방식(payment) & 결제상세(paymentdetail)
+
+![1562322289682](assets/1562322289682.png)
+
+- **결제 방식(payment) 예시 데이터**
+
+  pay_group 예시 : 현금, 카드, 기타
+
+  pay_type : 
+
+  				- 현금 : 계좌이체, 무통장입금, 토스, ...
+  				- 카드 : 페이코, 신용카드, 카카오페이, ...
+  				- 기타 : 포인트, 쿠폰, ...
+
+  | no   | pay_group | pay_type   | order_no |
+  | ---- | --------- | ---------- | -------- |
+  | 1    | 카드      | 신용카드   | 1        |
+  | 2    | 카드      | 페이코     | 2        |
+  | 3    | 현금      | 무통장입금 | 3        |
+  | 4    | 현금      | 계좌이체   | 4        |
+  | 5    | 기타      | 쿠폰       | 5        |
+  | 6    | 기타      | 포인트     | 6        |
+
+- **결제 상세(paymentdetail)** 테이블의 경우 해당 `pay_type`의 상세 정보를 입력한다.
+
+<br>
+
+# [8] 주소(address)
+
+![1562322589910](assets/1562322589910.png)
+
+- 주소의 경우 회원이 주문시 입력한 주소를 저장한다. (비회원 해당 X)
+
+- 주소(address)테이블에 주소 데이터를 저장하는 이유 : 회원이 주문을 할 때 주소 자동 입력 기능을 위해
+
+- 비회원의 경우 바로 `주문(order)` 테이블로 데이터가 들어가며, 회원일 경우 `주소(address)`에 저장을 하고 `주문(order)` 테이블로 들어가게 된다.
+
+- 주소와 주문테이블은 서로 관계가 없다. (주문 완료 후 주소테이블 데이터를 변경한다고 가정했을 때 주문 테이블의 주소 데이터가 변경되면 안되기 때문)
+
+  
 
