user tdd 시나리오 추가

--- a/2주차/1. 시퀀스 & TDD.md
+++ b/2주차/1. 시퀀스 & TDD.md
@@ -204,6 +204,104 @@ public class UserDao {
 
 
 
+### + 회원가입 유효성(정규식) 검사 추가
+
+**UserController.java**
+
+```java
+@RequestMapping(value="/join", method=RequestMethod.POST) 
+public ResponseEntity<JSONResult> joinUser(@RequestBody @Valid UserVo userVo,
+                                           BindingResult result) {
+
+    if(result.hasErrors()) {
+        List<ObjectError> allErrors = result.getAllErrors();
+        for(ObjectError error : allErrors) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(JSONResult.fail(error.getDefaultMessage()));
+        }
+    }
+
+    // 유효성검사
+    if(!Pattern.matches(UserVo.CHECK_ID_VALID, userVo.getId())) {
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(JSONResult.fail("잘못된 아이디 형식입니다."));
+    }else if(!Pattern.matches(UserVo.CHECK_PASSWORD_VALID, userVo.getPassword())) {
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(JSONResult.fail("잘못된 비밀번호 형식입니다."));
+    }else if(!Pattern.matches(UserVo.CHECK_PHONE_VALID, userVo.getPhoneNumber())) {
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(JSONResult.fail("잘못된 전화번호 형식입니다."));
+    }else if(!Pattern.matches(UserVo.CHECK_NAME_VALID, userVo.getName())){
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(JSONResult.fail("잘못된 이름 형식입니다."));
+    }
+
+    UserVo vo = userService.joinUser(userVo);
+    return ResponseEntity.status(HttpStatus.OK).body(JSONResult.success(vo));
+}
+```
+
+**UserVo.java**
+
+```java
+public class UserVo {
+
+    // 영문시작 특수문자 불가능('-'가능), 5~12자 
+    public static final String CHECK_ID_VALID = "^[a-zA-Z]{1}[a-zA-Z0-9_]{4,11}$";
+
+    // 정규식 (영문(대소문자 구분), 숫자, 특수문자 조합, 9~12자리)
+    public static final String CHECK_PASSWORD_VALID = "^(?=.*\\d)(?=.*[~`!@#$%\\^&*()-])(?=.*[a-z])(?=.*[A-Z]).{9,12}$";
+
+    // 전화번호 정규식
+    public static final String CHECK_PHONE_VALID = "^01(?:0|1|[6-9])-(?:\\d{3}|\\d{4})-\\d{4}$"; 
+
+    // 영문 혹은 한글 이름(둘 다 사용 불가)
+    public static final String CHECK_NAME_VALID = "^[가-힣]{2,4}|^[a-zA-Z]*$";
+
+    private Long no;
+
+    @NotEmpty(message="아이디를 입력해주세요.")
+    private String id;
+
+    @NotEmpty(message="이름을 입력해주세요")
+    @Length(min = 2, max = 8, message="이름 형식이 잘못되었습니다.")
+    private String name;
+
+    @NotEmpty(message="비밀번호를 입력해주세요")
+    private String password;
+
+    private String passwordQuestion;
+
+    @Length(min = 2, message="답변은 2글자 이상을 입력해주세요.")
+    private String passwordAnswer;
+
+    @NotEmpty(message="전화번호를 입력해주세요")
+    private String phoneNumber;
+
+    @Email(message="이메일 형식이 맞지 않습니다.")
+    @NotEmpty(message="이메일을 입력해주세요")
+    private String email;
+    private String birthDate;
+
+    private String point;
+    private String endDate;
+
+    public UserVo() {
+        super();
+    }
+
+    public UserVo(String id, String name, String password, String passwordQuestion, 
+                  String passwordAnswer, String phoneNumber, String email) {
+        this.id = id;
+        this.name = name;
+        this.password = password;
+        this.passwordQuestion = passwordQuestion;
+        this.passwordAnswer = passwordAnswer;
+        this.phoneNumber = phoneNumber;
+        this.email = email;
+    }
+    ...
+}
+
+```
+
+
+
 # 2. 로그인
 
 ![1562659826464](assets/login.png)
@@ -313,7 +411,7 @@ public void findId() throws Exception {
 
 ## Controller Test
 
-### 1) 상품리스트 접근 요청 TDD
+### 1) 상품리스트 가져오기 TDD
 
 **UserControllerTest.java**
 
@@ -344,6 +442,8 @@ public void findId() throws Exception {
 # 6. 주문내역 확인
 
 ![checkorder](assets/checkorder.png)
+
+
 
 
 
