--- a/2주차/1. 고객 시퀀스 & TDD.md
+++ b/2주차/1. 고객 시퀀스 & TDD.md
@@ -2,11 +2,27 @@
 
 ---
 
-상세에 바로주문 넣기
+![1562918082520](assets/1562918082520.png)
+
+# 목차
+
+![1562918368199](assets/1562918368199.png)
 
 # 1. 회원가입
 
 ![1562660477778](assets/1562660477778.png)
+
+> 필요 API
+>
+> 회원가입 요청 : `/api/user/join`
+>
+> ![1562911603585](assets/1562911603585.png)
+>
+> 아이디 중복 체크 요청 : `api/user/checkId`
+>
+> ![1562911612267](assets/1562911612267.png)
+
+<br>
 
 ## 🎈Controller Test
 
@@ -306,6 +322,18 @@ public class UserVo {
 
 ![1562659826464](assets/login.png)
 
+> 필요 API
+>
+> 로그인 요청 : `api/user/login`
+>
+> ![1562911633140](assets/1562911633140.png)
+>
+> 아이디 찾기 요청 : `/api/user/findId`
+>
+> ![1562911645616](assets/1562911645616.png)
+
+
+
 ## 🎈Controller Test
 
 ### 1) 로그인 요청 TDD
@@ -399,9 +427,9 @@ public void findId() throws Exception {
 
 
 
-### 3) 비밀번호 찾기 요청 TDD
+### 3) 비밀번호 찾기 요청
 
-> email을 회원table에서 찾아, 있으면 해당 메일로 임의 변경 PW전송 or 인증번호 전송
+> email을 회원table에서 찾아, 있으면 해당 메일로 임의 변경 PW전송 or 인증번호 전송 인증
 
 
 
@@ -409,14 +437,57 @@ public void findId() throws Exception {
 
 ![1562659826464](assets/1562659826464.png)
 
-## Controller Test
+> 필요 API
+>
+> 상품 리스트 가져오기(메인) : `api/main`
+>
+> ![1562912107677](assets/1562912107677.png)
+>
+> 검색  & 해당 카테고리의 상품 리스트 가져오기:`/api/product/{categoryNo}`
+>
+> ![1562911729734](assets/1562911729734.png)
+
+## 🎈 Controller Test
 
 ### 1) 상품리스트 가져오기 TDD
 
-**UserControllerTest.java**
+**ProductController.java**
 
 ```java
+@RestController("productAPIController")
+@RequestMapping("/api/product")
+public class ProductController {
 
+	@Autowired
+	private ProductService productService;
+
+	@RequestMapping(value = "/{categoryNo}", method = RequestMethod.GET)
+	public JSONResult getProductList(@PathVariable(value = "categoryNo") Long categoryNo,
+			@RequestParam(value="keyword", required = false, defaultValue = "") String keyword) {
+		
+		// 해당 카테고리의 list return
+		List<ProductVo> list = productService.getProductList(categoryNo, keyword);
+		return JSONResult.success(list);
+	}
+}
+```
+
+**ProductControllerTest.java**
+
+```java
+@Test
+public void testGetProductList() throws Exception {
+    int categoryNo = 1;
+    ResultActions resultActions = 
+        mockMvc
+        .perform(get("/api/product/{categoryNo}", categoryNo)
+                 .param("keyword","상의")		
+                 .contentType(MediaType.APPLICATION_JSON)); 
+
+    resultActions 
+        .andExpect(status().isOk()).andDo(print());
+
+}
 ```
 
 
@@ -425,23 +496,218 @@ public void findId() throws Exception {
 
 # 4. 상품 상세
 
+> TODO : 상품 상세에 바로 주문 넣기!!!!!!!
+
 ![1562659902012](assets/1562659902012.png)
 
+> 장바구니에 상품 추가 : `/api/cart/add/{userId}/{optionNo}`
+>
+> > 결과 return : true or false
+>
+> ![1562914735972](assets/1562914735972.png)
 
+## 🎈 Controller Test
 
+**CartController.java**
 
+```java
+@RequestMapping(value = "/{userId}/{optionNo}", method = RequestMethod.POST)
+public JSONResult addCart(@PathVariable(value="userId") String userId,
+                          @PathVariable(value="optionNo") Long optionNo) {
+    // 해당 회원(userId)의 장바구니에 상품(optionNo)추가
+    boolean result = CartService.addCart(userId, optionNo);
+    return JSONResult.success(result);
+}
+```
+
+**CartControllerTest.java**
+
+```java
+@Test
+public void testAddCart() throws Exception {
+    String userId = "leeap1004";
+    Long optionNo = 1L;
+    ResultActions resultActions = 
+        mockMvc
+        .perform(post("/api/cart/{userId}/{optionNo}", userId, optionNo)
+                 .contentType(MediaType.APPLICATION_JSON)); 
+
+    resultActions 
+        .andExpect(status().isOk()).andDo(print());
+
+}
+```
+
+<br>
 
 # 5. 장바구니
 
 ![1562655774676](assets/productdetail.png)
 
+> 필요 api
+>
+> 장바구니 조회:`/api/cart/{userId}`
+>
+> ![1562915240369](assets/1562915240369.png)
+>
+> 장바구니 수정 - 옵션 수정 : `/modify/{userId}/{cartNo}`
+>
+> 장바구니 수정 - 수량 수정 : `/modify/{userId}/{cartNo}`
+>
+> ![1562917273732](assets/1562917273732.png)
+>
+> 장바구니 삭제`/cart/delete/{userId}/{cartNo}`
+>
+> ![1562917484933](assets/1562917484933.png)
 
+## 🎈 Controller Test
+
+**CartController.java**
+
+```java
+@RestController("cartAPIController")
+@RequestMapping("/api/cart")
+public class CartController {
+
+    @Autowired
+    private ProductService productService;
+
+    @Autowired
+    private CartService CartService;
+
+    @RequestMapping(value = "/{userId}", method = RequestMethod.GET)
+    public JSONResult getCartList(@PathVariable(value="userId") String userId) {
+
+        // 상품 list return
+        List<ProductVo> list = productService.getProductList(userId);
+        return JSONResult.success(list);
+    }
+
+    @RequestMapping(value = "/{userId}/{optionNo}", method = RequestMethod.POST)
+    public JSONResult addCart(@PathVariable(value="userId") String userId,
+                              @PathVariable(value="optionNo") Long optionNo) {
+        // 해당 회원(userId)의 장바구니에 상품(optionNo)추가
+        boolean result = CartService.addCart(userId, optionNo);
+        return JSONResult.success(result);
+    }
+
+    @RequestMapping(value = "/modify/{userId}/{cartNo}", method = RequestMethod.POST)
+    public JSONResult modifyCart(
+        @PathVariable(value="userId") String userId,
+        @PathVariable(value="cartNo") Long cartNo,
+        @RequestParam(value="optionNo", required = false, defaultValue = "0") Long optionNo,
+        @RequestParam(value="quantity", required = false, defaultValue = "0") Long quantity) {
+        boolean result = false;
+
+        if(optionNo!=0) {
+            // 해당 회원(userId)의 장바구니에 상품(optionNo)추가
+            result = CartService.modifyCartOption(userId, cartNo, optionNo);			
+        }else if(quantity!=0) {
+            // 해당 회원(userId)의 장바구니에 상품(optionNo)추가
+            result = CartService.modifyCartQuantity(userId, cartNo, quantity);
+        }
+        return JSONResult.success(result);
+    }
+
+    @RequestMapping(value = "/delete/{userId}/{cartNo}", method = RequestMethod.DELETE)
+    public JSONResult deleteCart(
+        @PathVariable(value="userId") String userId,
+        @PathVariable(value="cartNo") Long cartNo) {
+
+        boolean result = CartService.deleteCart(userId, cartNo);
+
+        return JSONResult.success(result);
+    }
+}
+```
+
+**CartControllerTest.java**
+
+```java
+@Test
+public void testGetCart() throws Exception {
+    String userId = "leeap1004";
+    ResultActions resultActions = 
+        mockMvc
+        .perform(get("/api/cart/{userId}", userId)
+                 .contentType(MediaType.APPLICATION_JSON)); 
+
+    resultActions 
+        .andExpect(status().isOk()).andDo(print());
+
+}
+
+@Test
+public void testAddCart() throws Exception {
+    String userId = "leeap1004";
+    Long optionNo = 1L;
+    ResultActions resultActions = 
+        mockMvc
+        .perform(post("/api/cart/{userId}/{optionNo}", userId, optionNo)
+                 .contentType(MediaType.APPLICATION_JSON)); 
+
+    resultActions 
+        .andExpect(status().isOk()).andDo(print());
+
+}
+
+@Test
+public void testModifyCartOption() throws Exception {
+    // leeap1004회원의 장바구니 2번의 옵션을 1로 변경
+    String userId = "leeap1004";
+    String cartNo = "2";
+    String optionNo = "1";
+    ResultActions resultActions = 
+        mockMvc
+        .perform(post("/api/cart/modify/{userId}/{cartNo}", userId, cartNo)
+                 .param("optionNo", optionNo)
+                 .contentType(MediaType.APPLICATION_JSON)); 
+
+    resultActions 
+        .andExpect(status().isOk()).andDo(print());
+
+}
+
+@Test
+public void testModifyCartQuantity() throws Exception {
+    // leeap1004회원의 장바구니 2번의 옵션의 수량을 3으로 변경
+    String userId = "leeap1004";
+    String cartNo = "2";
+    String quantity = "3";
+    ResultActions resultActions = 
+        mockMvc
+        .perform(post("/api/cart/modify/{userId}/{cartNo}", userId, cartNo)
+                 .param("quantity", quantity)
+                 .contentType(MediaType.APPLICATION_JSON)); 
+
+    resultActions 
+        .andExpect(status().isOk()).andDo(print());
+
+}
+
+@Test
+public void testDeleteCart() throws Exception {
+    // leeap1004회원의 장바구니 2L번의 옵션을 삭제
+    String userId = "leeap1004";
+    String cartNo = "2";
+    ResultActions resultActions = 
+        mockMvc
+        .perform(delete("/api/cart/delete/{userId}/{cartNo}", userId, cartNo)
+                 .contentType(MediaType.APPLICATION_JSON)); 
+
+    resultActions 
+        .andExpect(status().isOk()).andDo(print());
+
+}
+```
 
 
 
 # 6. 주문내역 확인
 
 ![checkorder](assets/checkorder.png)
+
+> 새 페이지 로드
 
 
 
