--- a/2주차/1. 고객 시퀀스 & TDD.md
+++ b/2주차/1. 고객 시퀀스 & TDD.md
@@ -2,7 +2,7 @@
 
 ---
 
-![1562918082520](assets/1562918082520.png)
+![1562932814391](assets/1562932814391.png)
 
 # 목차
 
@@ -16,11 +16,11 @@
 >
 > 회원가입 요청 : `/api/user/join`
 >
-> ![1562911603585](assets/1562911603585.png)
+> ![1562932836383](assets/1562932836383.png)
 >
 > 아이디 중복 체크 요청 : `api/user/checkId`
 >
-> ![1562911612267](assets/1562911612267.png)
+> ![1562932847185](assets/1562932847185.png)
 
 <br>
 
@@ -326,11 +326,11 @@ public class UserVo {
 >
 > 로그인 요청 : `api/user/login`
 >
-> ![1562911633140](assets/1562911633140.png)
+> ![1562932867728](assets/1562932867728.png)
 >
 > 아이디 찾기 요청 : `/api/user/findId`
 >
-> ![1562911645616](assets/1562911645616.png)
+> ![1562932879195](assets/1562932879195.png)
 
 
 
@@ -441,11 +441,11 @@ public void findId() throws Exception {
 >
 > 상품 리스트 가져오기(메인) : `api/main`
 >
-> ![1562912107677](assets/1562912107677.png)
+> ![1562932896158](assets/1562932896158.png)
 >
 > 검색  & 해당 카테고리의 상품 리스트 가져오기:`/api/product/{categoryNo}`
 >
-> ![1562911729734](assets/1562911729734.png)
+> ![1562932914344](assets/1562932914344.png)
 
 ## 🎈 Controller Test
 
@@ -504,7 +504,9 @@ public void testGetProductList() throws Exception {
 >
 > > 결과 return : true or false
 >
-> ![1562914735972](assets/1562914735972.png)
+> ![1562932169506](assets/1562932169506.png)
+>
+> 비회원의 경우 session id=userId
 
 ## 🎈 Controller Test
 
@@ -548,17 +550,17 @@ public void testAddCart() throws Exception {
 >
 > 장바구니 조회:`/api/cart/{userId}`
 >
-> ![1562915240369](assets/1562915240369.png)
+> ![1562932027036](assets/1562932027036.png)
 >
 > 장바구니 수정 - 옵션 수정 : `/modify/{userId}/{cartNo}`
 >
 > 장바구니 수정 - 수량 수정 : `/modify/{userId}/{cartNo}`
 >
-> ![1562917273732](assets/1562917273732.png)
+> ![1562917273732](assets/modifycart.png)
 >
 > 장바구니 삭제`/cart/delete/{userId}/{cartNo}`
 >
-> ![1562917484933](assets/1562917484933.png)
+> ![1562932212797](assets/1562932212797.png)
 
 ## 🎈 Controller Test
 
