제출양식 추가

--- a/3주차/제출양식.md
+++ b/3주차/제출양식.md
@@ -1,11 +1,64 @@
-작업 계획 (테이블)
+## 작업 계획 (테이블)
 
-| API목록      | url   | 예상일정 | 예상소요시간 | 개발일정 | 개발시간  | 작업결과서        |
-| ------------ | ----- | -------- | ------------ | -------- | --------- | ----------------- |
-| 로그인 API   | login | 07.15    | 3h (3시간)   | 07.16    | 4h(4시간) | <링크> or 빈 공백 |
-| 회원가입 API | join  | 07.15    | 3h (3시간)   | 07.16    | 4h(4시간) | <링크> or 빈 공백 |
+서비스 나누기 - 카테고리, 상품, 주문, 장바구니
+
+### [회원] - `/api/user/{url}`
+
+| API목록          | url       | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
+| ---------------- | --------- | -------- | ------------ | -------- | -------- | ---------- |
+| 로그인 API       | /login    | 07.16    | 1h (1시간)   | 07.16    | 1h       |            |
+| 회원가입 API     | /join     | 07.16    | 2h (2시간)   | 07.16    | 2h       |            |
+| 아이디 중복 검사 | /checkId  | 07.16    | 1h (1시간)   | 07.16    | 1h       |            |
+| 아이디 찾기      | /findId   | 07.16    | 1h (1시간)   | 07.16    | 1h       |            |
+| 회원리스트       | /userList | 07.16    | 1h (1시간)   | 07.16    | 30m      |            |
+| 회원정보수정     | /modify   | 07.17    | 2h (2시간)   | 07.17    |          |            |
+| 회원삭제(탈퇴)   | /delete   | 07.17    | 1h (1시간)   | 07.17    |          |            |
+|                  |           |          |              |          |          |            |
+
+### [상품] - `/api/product/{url}`
+
+| API목록 | url  | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
+| ------- | ---- | -------- | ------------ | -------- | -------- | ---------- |
+| 상품    |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
 
 
+
+### [장바구니] - `/api/cart/{url}`
+
+
+
+| API목록 | url  | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
+| ------- | ---- | -------- | ------------ | -------- | -------- | ---------- |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+
+
+
+### [관리자] - `/api/admin/{url}`
+
+| API목록 | url  | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
+| ------- | ---- | -------- | ------------ | -------- | -------- | ---------- |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
+|         |      |          |              |          |          |            |
 
 
 
