카테고리 작업 완료 - CRUD

--- a/3주차/제출양식.md
+++ b/3주차/제출양식.md
@@ -11,9 +11,23 @@
 | 아이디 중복 검사 | /checkId  | 07.16    | 1h (1시간)   | 07.16    | 1h       |            |
 | 아이디 찾기      | /findId   | 07.16    | 1h (1시간)   | 07.16    | 1h       |            |
 | 회원리스트       | /userList | 07.16    | 1h (1시간)   | 07.16    | 30m      |            |
-| 회원정보수정     | /modify   | 07.17    | 2h (2시간)   | 07.17    |          |            |
-| 회원삭제(탈퇴)   | /delete   | 07.17    | 1h (1시간)   | 07.17    |          |            |
-|                  |           |          |              |          |          |            |
+| 회원정보수정     | /modify   | 07.17    | 1h (1시간)   | 07.17    | 2h       | 오류해결   |
+| 회원삭제(탈퇴)   | /delete   | 07.17    | 1h (1시간)   | 07.17    | 30h      |            |
+
+<br>
+
+### [카테고리] - `/api/admin/category/{url}`
+
+| API목록                | url                                       | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
+| ---------------------- | ----------------------------------------- | -------- | ------------ | -------- | -------- | ---------- |
+| 상위카테고리 중복 검사 | /api/admin/category/checkName?name={name} | 07.18    | 1h           | 07.18    | 2h       |            |
+| 하위카테고리 중복 검사 | /api/admin/category/checkLowName          | 07.18    | 30h          | 07.18    | 1h       |            |
+| 상위 카테고리 등록     | /api/admin/category/add                   | 07.18    | 1h           | 07.18    | 30h      |            |
+| 하위 카테고리 등록     | /api/admin/category/addLow                | 07.18    | 30h          | 07.18    | 30h      |            |
+| 카테고리 수정          | /api/admin/category/modify                | 07.18    | 30h          | 07.18    | 30h      |            |
+| 카테고리 삭제          | /api/admin/category/delete?no={no}        | 07.18    | 30h          | 07.18    | 30h      |            |
+
+<br>
 
 ### [상품] - `/api/product/{url}`
 
@@ -28,11 +42,9 @@
 |         |      |          |              |          |          |            |
 |         |      |          |              |          |          |            |
 
-
+<br>
 
 ### [장바구니] - `/api/cart/{url}`
-
-
 
 | API목록 | url  | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
 | ------- | ---- | -------- | ------------ | -------- | -------- | ---------- |
