--- a/3주차/제출양식.md
+++ b/3주차/제출양식.md
@@ -21,26 +21,27 @@
 | API목록                | url                                       | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
 | ---------------------- | ----------------------------------------- | -------- | ------------ | -------- | -------- | ---------- |
 | 상위카테고리 중복 검사 | /api/admin/category/checkName?name={name} | 07.18    | 1h           | 07.18    | 2h       |            |
-| 하위카테고리 중복 검사 | /api/admin/category/checkLowName          | 07.18    | 30h          | 07.18    | 1h       |            |
-| 상위 카테고리 등록     | /api/admin/category/add                   | 07.18    | 1h           | 07.18    | 30h      |            |
-| 하위 카테고리 등록     | /api/admin/category/addLow                | 07.18    | 30h          | 07.18    | 30h      |            |
-| 카테고리 수정          | /api/admin/category/modify                | 07.18    | 30h          | 07.18    | 30h      |            |
-| 카테고리 삭제          | /api/admin/category/delete?no={no}        | 07.18    | 30h          | 07.18    | 30h      |            |
+| 하위카테고리 중복 검사 | /api/admin/category/checkLowName          | 07.18    | 30m          | 07.18    | 1h       |            |
+| 상위 카테고리 등록     | /api/admin/category/add                   | 07.18    | 1h           | 07.18    | 30m      |            |
+| 하위 카테고리 등록     | /api/admin/category/addLow                | 07.18    | 30m          | 07.18    | 30m      |            |
+| 카테고리 수정          | /api/admin/category/modify                | 07.18    | 30m          | 07.18    | 30m      |            |
+| 카테고리 삭제          | /api/admin/category/delete?no={no}        | 07.18    | 30m          | 07.18    | 30m      |            |
+| 카테고리 목록          | /api/admin/category/list                  | 07.18    | 1h           | 07.18    | 1h       |            |
 
 <br>
 
 ### [상품] - `/api/product/{url}`
 
-| API목록 | url  | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
-| ------- | ---- | -------- | ------------ | -------- | -------- | ---------- |
-| 상품    |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
+| API목록             | url                          | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서                                                   |
+| ------------------- | ---------------------------- | -------- | ------------ | -------- | -------- | ------------------------------------------------------------ |
+| 상품등록            | /api/admin/product/add       | 07.19    | 2h           | 07.19    | 4h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/%EC%83%81%ED%92%88%EB%93%B1%EB%A1%9D-%EC%9E%91%EC%97%85%EA%B2%B0%EA%B3%BC%EC%84%9C) |
+| 상품 상위 옵션 등록 | /api/admin/product/addOption | 07.19    | 1h           | 07.19    | 2h       |                                                              |
+|                     |                              |          |              |          |          |                                                              |
+|                     |                              |          |              |          |          |                                                              |
+|                     |                              |          |              |          |          |                                                              |
+|                     |                              |          |              |          |          |                                                              |
+|                     |                              |          |              |          |          |                                                              |
+|                     |                              |          |              |          |          |                                                              |
 
 <br>
 
@@ -90,7 +91,6 @@
        user_pwd = 사용자 비밀번호  
        client_ip = 사용자 접근 IP 
 
-
 ■ response: 
      200: 성공 
        xxxxx 
@@ -109,3 +109,24 @@ b.java
 ■ TC CODE 
 
  <tc code>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
