--- a/3주차/제출양식.md
+++ b/3주차/제출양식.md
@@ -32,6 +32,19 @@
 
 ### [상품] - `/api/product/{url}`
 
+상품 등록할 때
+
+-> 카테고리 수 만큼 등록 (category에서 존재하는 카테고리 목록 가져오고 그중에 선택한 것 만큼 -> 상품 먼저 등록 후 -> insetkey가져와서 -> category_product에 등록)
+
+->  옵션여부 false인 경우 -> 바로 상품 등록 
+
+-> 옵션여부 true인 경우 -> 
+
+> - 옵션 이름 -> optionname table 순회 후 있으면 그 번호 가져오고 없으면 insert후 그 번호 가져오기
+> - 옵션 이름 번호 가져오면 상품 번호와 함께, 날라온 세트 옵션 값 등록(1(색상)번일 경우) -> 같은 세트인 검정, 파랑을 option테이블에 insert
+
+![1563535970285](assets/1563535970285.png)
+
 | API목록             | url                          | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서                                                   |
 | ------------------- | ---------------------------- | -------- | ------------ | -------- | -------- | ------------------------------------------------------------ |
 | 상품등록            | /api/admin/product/add       | 07.19    | 2h           | 07.19    | 4h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/%EC%83%81%ED%92%88%EB%93%B1%EB%A1%9D-%EC%9E%91%EC%97%85%EA%B2%B0%EA%B3%BC%EC%84%9C) |
