--- a/3주차/작업결과서/상품등록.md
+++ b/3주차/작업결과서/상품등록.md
@@ -1,5 +1,22 @@
 # 상품등록 API (  /api/admin/product/add ) 
 
+# 상품등록 API (  /api/admin/product/add ) 
+> 상품등록이 생각보다 고려할 것이 많아 시간이 오래 걸렸다.
+---
+상품 등록할 때 고려사항
+
+-> 카테고리 수 만큼 등록 (category에서 존재하는 카테고리 목록 가져오고 그중에 선택한 것 만큼 -> 상품 먼저 등록 후 -> insetkey가져와서 -> category_product에 등록)
+
+->  옵션여부 false인 경우 -> 바로 상품 등록 
+
+-> 옵션여부 true인 경우 -> 
+
+> - 옵션 이름 -> optionname table 순회 후 있으면 그 번호 가져오고 없으면 insert후 그 번호 가져오기
+> - 옵션 이름 번호 가져오면 상품 번호와 함께, 날라온 세트 옵션 값 등록(1(색상)번일 경우) -> 같은 세트인 검정, 파랑을 option테이블에 insert
+
+![예시데이터](https://github.com/jungeunlee95/shoppingmall-project-docs/blob/master/3%EC%A3%BC%EC%B0%A8/assets/1563535970285.png)
+---
+
 ■ request: 
    post 
      params: 
@@ -48,9 +65,10 @@ public ResponseEntity<JSONResult> addProduct(@RequestBody ProductVo productVo) {
 
 ```java
 public Boolean addProduct(ProductVo productVo) {
-    int result = 0; 
-    int result2 = 0;
-    int result3 = 0;
+    // 트랜잭션 적용하면 사라질 코드
+    int result = 0;  // 상품등록 성공 확인
+    int result2 = 0; // 카테고리 등록 성공 확인
+    int result3 = 0; // 옵션 등록 성공 확인
 
     // 옵션 사용 X -> 카테고리만 등록
     result = productDao.addProduct(productVo);
@@ -59,9 +77,10 @@ public Boolean addProduct(ProductVo productVo) {
     }
 
     // 옵션 사용 O -> 옵션 등록
-    if(result==1 && productVo.isOption()){ //옵션 사용 O
+    if(result==1 && productVo.isOption()){
         result3 = productDao.addOptionValue(productVo.getNo(), productVo.getOptionValueList());
     }
+
     return result==1 && result2==productVo.getCategoryList().size() && result3==productVo.getOptionValueList().size();
 } 
 ```
